css/conditionals/news/view-mode-news-listing.css
/* ... */
@media (max-width: 35.5em) {
  .view-gsb-announcement-school-listing.view-display-id-entity_view_1 .view-mode-news_listing .field-name-field-author,
  .view-gsb-announcement-school-listing.view-display-id-entity_view_1 .view-mode-news_listing .field-collection-item-field-authors,
  .view-mode-news_listing .field-name-field-author,
  .view-mode-news_listing .field-collection-item-field-authors {
    font-size: 16px;
  }
}
.view-gsb-announcement-school-listing.view-display-id-entity_view_1 .view-mode-news_listing .field-type-image,
.view-mode-news_listing .field-type-image {
  float: left;
  max-width: 150px;
}
.view-gsb-announcement-school-listing.view-display-id-entity_view_1 .view-mode-news_listing .field-type-image img,
.view-mode-news_listing .field-type-image img {
  width: 100%;
}
@media (max-width: 48em) {
  .view-gsb-announcement-school-listing.view-display-id-entity_view_1 .view-mode-news_listing .field-type-image,
  .view-mode-news_listing .field-type-image {
    display: none;
  }
}

.node-book.view-mode-news_listing .gsb_field_formatter_field_collection_separator {
  margin: 6px 0 3px 0;
}
.node-book.view-mode-news_listing .field-type-image {
  max-width: 100px;
}

.view-gsb-announcement-school-listing.view-display-id-annssh_stories_list .views-row,
.view-gsb-faculty-insights-listing .views-row,
.view-gsb-in-the-media-listing .views-row,
.view-gsb-ranking-listing .views-row,
.view-display-id-alumni_stories_listing .views-row,
.view-display-id-giving_stories_listing .views-row,
.view-display-id-alumni_book_listing .views-row {
  border-top: 1px #c4c4c4 solid;
  padding: 26px 0;
}
.view-gsb-announcement-school-listing.view-display-id-annssh_stories_list .views-row:first-of-type,
.view-gsb-faculty-insights-listing .views-row:first-of-type,
.view-gsb-in-the-media-listing .views-row:first-of-type,
.view-gsb-ranking-listing .views-row:first-of-type,
.view-display-id-alumni_stories_listing .views-row:first-of-type,
.view-display-id-giving_stories_listing .views-row:first-of-type,
.view-display-id-alumni_book_listing .views-row:first-of-type {
  border-top: 0;
}

.view-gsb-announcement-school-listing.view-display-id-entity_view_1 h2.title {
  color: #231f20;
  font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 26px;
  font-weight: bold;
  padding-top: 14px;
}
@media (max-width: 53.125em) {
  .view-gsb-announcement-school-listing.view-display-id-entity_view_1 h2.title {
    font-size: 22px;
  }
}
.view-gsb-announcement-school-listing.view-display-id-entity_view_1 .views-row {
  padding: 22px 26px;
}
.view-gsb-announcement-school-listing.view-display-id-entity_view_1 .views-row:first-of-type {
  border-top: 0;
}

.view-news-by-criteria .views-row {
  border-top: 1px lightgray solid;
  padding: 22px 26px;
}
.view-news-by-criteria .views-row:first-of-type {
  border-top: 0;
}

.field-name-field-story-title-ref .field-item {
  border-top: 1px lightgray solid;
  margin: 0 -26px;
  padding: 22px 26px;
}
.field-name-field-story-title-ref .field-item:first-of-type {
  border-top: 0;
}

.node-offsite-school-story .field-name-field-publisher {
  margin-bottom: 12px;
  display: inline-block;
}
.node-offsite-school-story .field-name-field-publisher em {
  font-style: normal;
  font-size: 16px;
  font-weight: bold;
  line-height: 1.2;
  text-transform: uppercase;
}
.node-offsite-school-story .field-name-field-date {
  font-size: 16px !important;
  margin-bottom: 12px !important;
}
.node-offsite-school-story em.field-name-field-publisher {
  font-style: normal;
  font-size: 16px;
  font-weight: bold;
  line-height: 1.2;
  text-transform: uppercase;
  display: block;
}

