WP-7941 In the Media label overlapping issue fixed

--- a/css/conditionals/news/view-mode-news-listing.css
+++ b/css/conditionals/news/view-mode-news-listing.css
@@ -347,3 +347,10 @@
   text-transform: uppercase;
   display: block;
 }
+
+.field-name-field-existing-node-fpp-ref .node-offsite-school-story.view-mode-teaser .field-name-field-image-key-image {
+  margin-bottom: -38px !important;
+}
+.field-name-field-existing-node-fpp-ref .node-offsite-school-story.view-mode-teaser .field-name-field-publisher {
+  margin-top: 52px !important;
+}
